# gastos-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: gastos.py  main.py  noticias.py
tests/: test_gastos.py  test_noticias.py
